Write and pass test for user story 3

--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -14,16 +14,17 @@
   <p><%= @shelter.address %></p>
   <p><%= "#{@shelter.city}, #{@shelter.state}  #{@shelter.zip}" %></p>
   <br>
-  <%= @shelter.shelter_reviews.each do |review| %>
+  <%= @shelter.reviews.each do |review| %>
   <section id = <%="Review-#{review.id}" %>>
     <div>
       <p><%= review.title %></p>
       <p><%= review.rating %></p>
       <p><%= review.content %></p>
-      <img src="<%=review.image%>">
   <% end %>
   <br>
   <%= link_to "Update Shelter", "/shelters/#{@shelter.id}/edit" %>
   <br>
   <%= link_to "Delete Shelter", "/shelters/#{@shelter.id}", method: :delete %>
+  <%= link_to "Add New Review", "/shelters/#{@shelter.id}/review/new" %>
+
 </content>
