--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -20,6 +20,7 @@
       <p><%= review.title %></p>
       <p><%= review.rating %></p>
       <p><%= review.content %></p>
+      <%= link_to "Edit Review", "/shelters/#{@shelter.id}/#{review.id}/edit" %>
   <% end %>
   <br>
   <%= link_to "Update Shelter", "/shelters/#{@shelter.id}/edit" %>
