--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -21,6 +21,7 @@
       <p><%= review.rating %></p>
       <p><%= review.content %></p>
       <%= link_to "Edit Review", "/shelters/#{@shelter.id}/#{review.id}/edit" %>
+      <%= link_to "Delete Review", "/shelters/#{@shelter.id}/#{review.id}", method: :delete %>
   <% end %>
   <br>
   <%= link_to "Update Shelter", "/shelters/#{@shelter.id}/edit" %>
