Write and pass test for user story 4

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,9 @@
       </li>
     </ul>
   </nav>
+  <% flash.each do |type, message| %>
+    <p><%= message %></p>
+  <% end %>
   <body>
     <%= yield %>
   </body>
