Write and pass test for User Story 9 up to nav bar

--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -9,4 +9,6 @@
   <%= link_to "Update Pet", "/pets/#{@pet.id}/edit" %>
   <br>
   <%= link_to "Delete Pet", "/pets/#{@pet.id}", method: :delete %>
+  <br>
+  <%= button_to "Favorite", "/favorite/#{@pet.id}", method: :patch %>
 </content>
