Write and pass test for user story 8

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,9 @@
         <%= link_to "All Shelters", "/shelters" %>
       </li>
     </ul>
+    <div class="favorite">
+      <p>Favorites: <%= favorite.total_count %></p>
+    </div>
   </nav>
   <% flash.each do |type, message| %>
     <p><%= message %></p>
