--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       </li>
       <li class = "nav_link">
         <div class="favorite">
-        <%= link_to "My Favorites: #{favorite.total_count}", "/favorites" %>
+        <%= link_to "My Favorites: #{favorite.total_count}", "/favorite" %>
         </div>
       </li>
     </ul>
