Write and pass test for user story 13

--- a/app/views/favorite/index.html.erb
+++ b/app/views/favorite/index.html.erb
@@ -6,6 +6,7 @@
       <div>
         <h2><%= link_to "#{pet.name}", "pets/#{pet.id}" %></h2>
         <img src="<%=pet.image%>">
+        <%= button_to "Unfavorite", "/favorite/#{pet.id}", params: { state: :index_redirect }, method: :delete %>
       </div>
     </section>
   <% end %>
