--- a/app/views/favorite/index.html.erb
+++ b/app/views/favorite/index.html.erb
@@ -14,4 +14,6 @@
       </section>
     <% end %>
   <% end %>
+  <br>
+  <%= button_to "Remove All Favorites", "/favorite", method: :delete %>
 </content>
