Write and pass test for user story 16

--- a/app/views/favorite/index.html.erb
+++ b/app/views/favorite/index.html.erb
@@ -16,4 +16,5 @@
   <% end %>
   <br>
   <%= button_to "Remove All Favorites", "/favorite", method: :delete %>
+  <%= link_to "Adoption Application", "/applications/new", method: :get %>
 </content>
