--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -10,6 +10,7 @@
   <% @application.pets.each do |pet| %>
     <section id = <%="#{pet.id}" %>>
         <%= link_to "#{pet.name}", "/pets/#{pet.id}" %>
+        <%= link_to "Approve application for #{pet.name}", "/pets/#{pet.id}/#{@application.id}" %>
     </section>
   <% end %>
 </content>
