--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -10,7 +10,10 @@
   <% @application.pets.each do |pet| %>
     <section id = <%="#{pet.id}" %>>
         <%= link_to "#{pet.name}", "/pets/#{pet.id}" %>
+
+        <% if !pet.accepted_app_id %>
         <%= link_to "Approve application for #{pet.name}", "/pets/#{pet.id}/#{@application.id}" %>
+        <% end %>
     </section>
   <% end %>
 </content>
