--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,10 +1,10 @@
 <content>
   <h1><%= @pet.name %></h1>
   <%= image_tag(image_path(@pet.image)) %>
-  <p><%= @pet.description %></p>
-  <p><%= @pet.age.to_s %></p>
-  <p><%= @pet.sex %></p>
-  <p><%= @pet.adoptable_status %></p>
+  <p><%= "Description: #{@pet.description}" %></p>
+  <p><%= "Age: #{@pet.age.to_s}" %></p>
+  <p><%= "Sex: #{@pet.sex}" %></p>
+  <p><%= "Adoption Status: #{@pet.adoptable_status}" %></p>
   <br>
   <%= link_to "Update Pet", "/pets/#{@pet.id}/edit" %>
   <br>
@@ -19,7 +19,7 @@
   <%= link_to "View All Applications", "/pets/#{@pet.id}/applications" %>
 
   <% if @pet.accepted_app_id %>
-  <% application = Application.find(@pet.accepted_app_id) %>
+    <% application = Application.find(@pet.accepted_app_id) %>
     <p> <%="On hold for #{application.name}" %> </p>
   <% end %>
 
