Write and pass test for user story 26

--- a/app/views/shelters/index.html.erb
+++ b/app/views/shelters/index.html.erb
@@ -5,7 +5,9 @@
       <div>
         <div class="index_listing"><%= link_to "#{shelter.name}", "/shelters/#{shelter.id}" %></div>
         <%= link_to "Edit Shelter", "/shelters/#{shelter.id}/edit" %>
-        <%= link_to "Delete Shelter", "/shelters/#{shelter.id}", method: :delete %>
+        <% if shelter.pending_pets.length == 0 %>
+          <%= link_to "Delete Shelter", "/shelters/#{shelter.id}", method: :delete %>
+          <% end %>
         <br>
         <br>
       </div>
