Write and pass test for User Story 30

--- a/app/views/shelters/show.html.erb
+++ b/app/views/shelters/show.html.erb
@@ -1,6 +1,7 @@
 <content>
   <h1><%= @shelter.name %></h1>
   <p> <%= "Number of pets living at this shelter: #{@shelter.pet_count}" %>
+  <p> <%= "Average rating of this shelter: #{@shelter.average_rating.round(1)}" %>
   <p> <%= "Number of applications on file at this shelter: #{@shelter.application_count}" %>
 
   <%= link_to "View Pets at #{@shelter.name}", "/shelters/#{@shelter.id}/pets" %>
