--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -13,7 +13,7 @@
 
         <% if !pet.accepted_app_id %>
           <%= link_to "Approve application for #{pet.name}", "/pets/#{pet.id}/#{@application.id}" %>
-        <% else %>
+        <% elsif pet.accepted_app_id == @application.id.to_s%>
           <%= link_to "Unapprove application for #{pet.name}", "/pets/#{pet.id}/#{@application.id}/revoke" %>
         <% end %>
     </section>
