Write and pass test for user story 37

--- a/app/views/favorite/index.html.erb
+++ b/app/views/favorite/index.html.erb
@@ -23,7 +23,16 @@
   <section id = "pending_applications"%>
     <h2>Pets Pending Adoption</h2>
     <% @pets.each do |pet| %>
-      <% if pet.applications.size > 0 %>
+      <% if pet.applications.size > 0 && !pet.accepted_app_id %>
+        <%= link_to "#{pet.name}", "pets/#{pet.id}"  %>
+      <% end %>
+    <% end %>
+  </section>
+
+  <section id = "approved_applications"%>
+    <h2>Pets With Approved Adoption Applications</h2>
+    <% @pets.each do |pet| %>
+      <% if pet.accepted_app_id %>
         <%= link_to "#{pet.name}", "pets/#{pet.id}"  %>
       <% end %>
     <% end %>
