--- a/app/views/pets/edit.html.erb
+++ b/app/views/pets/edit.html.erb
@@ -15,7 +15,7 @@
     <%= text_field_tag :description, @pet.description %>
     <br>
     <%= label_tag :adoptable_status %>
-    <%= text_field_tag :adoptable_status, @pet.adoptable_status %>
+    <%= select_tag "adoptable_status", options_for_select(["Adoptable", "Adopted", "Pending Adoption"], @pet.sex) %>
     <br>
     <%= label_tag :image %>
     <%= text_field_tag :image, @pet.image %>
