--- a/app/views/petapplications/index.html.erb
+++ b/app/views/petapplications/index.html.erb
@@ -1,7 +1,7 @@
-<h2><%= "People applying to give #{@pet.name} a furever home."  %></h2>
+<h2>People applying to give <%=link_to "#{@pet.name.upcase}", "/pets/#{@pet.id}"%> a furever home </h2>
 
 <% if @pet.applications == [] %>
-  <p><%="Nobody has applied to adopt #{@pet.name}. :("%></p>
+  <p><%="Nobody has applied to adopt #{@pet.name.upcase}. :("%></p>
 <% else %>
   <% @pet.applications.each do |app| %>
     <%= link_to "#{app.name}", "/applications/#{app.id}" %>
