--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,5 +1,5 @@
 <content>
-  <h1><%= @pet.name %></h1>
+  <h1><%= @pet.name.upcase %></h1>
   <%= image_tag(image_path(@pet.image)) %>
   <p><%= "Description: #{@pet.description}" %></p>
   <p><%= "Age: #{@pet.age.to_s}" %></p>
